[package]
name = "datafile-test"
description = "Generate test codes for data-file (JSON, YAML)"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lambdalisue/rs-datafile-test"
rust-version = "1.84"
version = "0.1.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
toml = "0.8.22"
